tests/negative/return_errors/return_type_mismatch.nano
# Expected error: Return type mismatch (got string, expected int)
# Hint: Ensure the returned value matches the function's declared return type.

fn get_count() -> int {
    return "not a number"
}

fn main() -> int {
    return 0
}
